fixed spacing

--- a/style.css
+++ b/style.css
@@ -134,5 +134,5 @@ button {
         font-size: 0.9rem;
     }
 
-    button { margin-top: 400px;}
+    button { margin-top: 250px;}
 }
